Add:weekday delete

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+body {
+  font-family: Lato, ui-sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Hiragino Sans GB", メイリオ, Meiryo, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
+  scroll-behavior: smooth;
+}
+
 .ViewContainer {
   list-style: none;
   -ms-box-orient: horizontal;
@@ -18,14 +23,16 @@
   font-size: 14px;
   text-align: center;
 }
+
 .Switch {
   margin: 4px 15px;
   font-size: 14px;
-  font-family: "Arial, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue";
+  font-family: "Lato, sans-serif";
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 .Switch_Toggle {
   position: relative;
   display: inline-block;
@@ -64,15 +71,15 @@
   transition: 0.4s;
 }
 
-input:checked + .Slider {
+input:checked+.Slider {
   background-color: #2196f3;
 }
 
-input:focus + .Slider {
+input:focus+.Slider {
   box-shadow: 0 0 1px #2196f3;
 }
 
-input:checked + .Slider:before {
+input:checked+.Slider:before {
   -webkit-transform: translateX(26px);
   -ms-transform: translateX(26px);
   transform: translateX(26px);
