Add:ヘッダの変更、view switch変更。

--- a/src/custom/task-list-header.module.css
+++ b/src/custom/task-list-header.module.css
@@ -3,6 +3,8 @@
   border-bottom: #e6e4e4 1px solid;
   border-top: #e6e4e4 1px solid;
   border-left: #e6e4e4 1px solid;
+  font-family: proxima-nova, "Helvetica Neue", Helvetica, Arial, sans-serif, 'proxima-nova', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+
 }
 
 .ganttTable_Header {
