--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
-  font-family: Lato, ui-sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Hiragino Sans GB", メイリオ, Meiryo, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: proxima-nova, "Helvetica Neue", Helvetica, Arial, sans-serif,'proxima-nova','Helvetica Neue',Helvetica,Arial,sans-serif;
   scroll-behavior: smooth;
+  background-color: #2196f3;
 }
 
 .ViewContainer {
