--- a/src/index.module.css
+++ b/src/index.module.css
@@ -26,3 +26,13 @@
   color: '#000';
   font-size: "1.4em";
 }
+
+.taskEmptyArea {
+  width: 99%;
+  border: 1px solid #000000;
+  position: relative;
+}
+
+.ganttArea {
+  width: 99%;
+}
