--- a/src/components/task-list-table/index.module.css
+++ b/src/components/task-list-table/index.module.css
@@ -75,3 +75,19 @@
   opacity: 1;
 }
 
+.select{
+  border:0px;
+  border-bottom:0.5px solid #d1d5db;
+  cursor: pointer;
+  background-color: transparent;
+}
+
+.select option{
+  font-weight: normal;
+  display: block;
+  white-space: nowrap;
+  min-height: 1.3em;
+  padding: 0px 100px 1px;
+  background: black;
+  font-size: 10pt;
+}
