--- a/src/components/task-list-table/index.module.css
+++ b/src/components/task-list-table/index.module.css
@@ -31,15 +31,13 @@
 
 .taskListExpander {
   color: rgb(86 86 86);
-  font-size: 0.6rem;
-  padding: 0.15rem 0.5rem 0rem 0.2rem;
+  padding-left: 0.5em;
   user-select: none;
   cursor: pointer;
 }
 
 .taskListEmptyExpander {
-  font-size: 0.6rem;
-  /* padding: 0.15rem 1rem 0rem 0.2rem; */
+  padding-left: 0.5em;
   user-select: none;
 }
 
