--- a/src/components/task-list-table/index.module.css
+++ b/src/components/task-list-table/index.module.css
@@ -30,16 +30,17 @@
 }
 
 .taskListExpander {
-  color: rgb(86 86 86);
-  padding-left: 0.5em;
-  user-select: none;
   cursor: pointer;
+  font-size: 9pt;
+  width: 15px;
+  background-color: transparent;
+  border: solid 1px #00000050;
+  border-radius: 3px;
+  margin: 7px;
+  line-height: 13px;
+  padding-left: 3px;
 }
 
-.taskListEmptyExpander {
-  padding-left: 0.5em;
-  user-select: none;
-}
 
 .taskLabel {
   font-size: 16px;
