ナビゲーションバー対応

--- a/src/common/css/index.module.css
+++ b/src/common/css/index.module.css
@@ -26,3 +26,19 @@
 .space {
   padding-right: 10px;
 }
+
+.fontSizeXS {
+  font-size: 0.5em;
+}
+
+.fontSizeS {
+  font-size: 0.8em;
+}
+
+.fontSizeM {
+  font-size: 1.2em;
+}
+
+.fontSizeL {
+  font-size: 1.5em;
+}
