--- a/src/components/navigation-bar/index.module.css
+++ b/src/components/navigation-bar/index.module.css
@@ -11,6 +11,11 @@
 }
 
 .infoListDate {
-  padding-left:10px;
+  padding-left: 10px;
   text-align: left;
+}
+
+.name {
+  font-weight: bold;
+  font-size: 1.2em;
 }
